# scummvm-sites

./: .gitignore  .htaccess  CHECKS  Dockerfile  Gemfile  Procfile  README  README.md  SVMDesign.cfg  agreement.tpl  apt-packages  atom.php  buildbot.tac  checksum_validator.php  composer.json  compute_hash.py  config  confirm_body.tpl  dat_parser.php  db_functions.php  diff_local.sh  docker-compose.yml  env.py  error_body.tpl  fileset.php  games_list.php  github_post_receive.php  groupcp_pending_info.tpl  index.html  index.php  index_body.tpl  js_functions.js  jumpbox.tpl  lock_unlock  login_body.tpl  logs.php  main.py  master.cfg  master.py  memberlist_body.tpl  (+47 more)
SVMDesign/: SVMDesign.cfg  SVMDesign.css  agreement.tpl  archives_forum_body.tpl  archives_menu_body.tpl  archives_post_body.tpl  bbcode.tpl  confirm_body.tpl  error_body.tpl  faq_body.tpl  groupcp_info_body.tpl  groupcp_pending_info.tpl  groupcp_user_body.tpl  index_body.tpl  install.tpl  jumpbox.tpl  login_body.tpl  memberlist_body.tpl  message_body.tpl  modcp_body.tpl  modcp_move.tpl  modcp_split.tpl  modcp_viewip.tpl  overall_footer.tpl  overall_header.tpl  posting_body.tpl  posting_poll_body.tpl  posting_preview.tpl  posting_smilies.tpl  posting_topic_review.tpl  privmsgs_body.tpl  privmsgs_popup.tpl  privmsgs_preview.tpl  privmsgs_read_body.tpl  profile_add_body.tpl  profile_avatar_gallery.tpl  profile_send_email.tpl  profile_send_pass.tpl  profile_view_body.tpl  search_body.tpl  (+11 more)
Scripts/: archives.php
admin/: index_body.tpl  index_frameset.tpl  page_header.tpl
apache2-config/: gamesdb.sev.zone.conf
app/: helpers.php
config/: master.cfg  routes.rb  scumm.py  secrets.yml
custom/: config.yml  people.opml
db/: schema.rb  seeds.rb
director/: build_factory.py  discord.py  env.py  github_hook.py  lingo_factory.py  scummvm_reporter.py  steps.py  targets.py
endpoints/: validate.php
htdocs/: site.webmanifest
include/: checksum_validator.php  (+3 more)
(+298 files in other folders)
