[tool.poetry]
name = "buildbot-director"
version = "0.2.0"
description = "Buildbot for scummvms director tests"
authors = ["Roland van Laar <roland@micite.net>"]

[tool.poetry.dependencies]
python= ">=3.10,<4"
environs = "*"
treq = "*"
crossbar = "^22.6.1"
buildbot = {extras = ["bundle"], version = "^3.9.2"}
psycopg2 = "^2.9.5"

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
mypy = "*"
pylint = "*"
black = "*"
ipdb = "*"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
