[tool.poetry]
name = "buildbot-director"
version = "0.2.0"
description = "Buildbot for scummvms director tests"
authors = ["Roland van Laar <roland@micite.net>"]

[tool.poetry.dependencies]
python= ">=3.10,<4"
environs = "*"
treq = "*"
buildbot = {extras = ["bundle"], version = "3.7.0"}
psycopg2 = "^2.9.5"
certifi = "^2023.7.22"

[tool.poetry.group.dev.dependencies]
isort = "*"
mypy = "*"
pylint = "*"
black = "*"
ipdb = "*"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
